<resources>
    <string name="app_name">CATeDroid</string>
    <string name="app_launcher_text">CATe</string>
    <string name="app_info_format">@string/generic_two_input_format</string>

    <string name="ui_login_title">Login</string>
    <string name="ui_login_instruction">Enter your DoC credentials below</string>
    <string name="ui_login_username">Username</string>
    <string name="ui_login_password">Password</string>
    <string name="ui_login_login">Log In</string>

    <string name="ui_main_menu_logout">Logout</string>

    <string name="ui_main_nav_home">Home</string>
    <string name="ui_main_nav_timetable">Timetable</string>
    <string name="ui_main_nav_notes">Notes</string>

    <string name="ui_dashboard_userinfo_title">Your details</string>
    <string name="ui_dashboard_greeting_format">Hello, %1$s</string>
    <string name="ui_dashboard_user_info_format">%1$s %2$s</string>
    <string name="ui_dashboard_outstanding_exercises_title">Outstanding exercises</string>
    <plurals name="ui_dashboard_timetable_outstanding_exercises_format">
        <item quantity="one">You have %d outstanding exercise</item>
        <item quantity="other">You have %d outstanding exercises</item>
    </plurals>
    <string name="ui_dashboard_timetable_item_module_format">@string/generic_two_input_format</string>
    <string name="ui_dashboard_timetable_item_enddate_format">Deadline: %1$s</string>
    <string name="ui_dashboard_timetable_item_spec_button">View Spec</string>
    <string name="ui_dashboard_timetable_item_spec_button_disabled">No Spec Available</string>
    <string name="ui_dashboard_timetable_item_handin_button">Hand In</string>

    <string name="error_invalid_credentials">Invalid username/password</string>
    <string name="error_server_error">A server error has occurred</string>

    <string name="contentdesc_login_logo">CATeDroid Logo</string>

    <string name="generic_two_input_format">%1$s %2$s</string>
</resources>
