<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/ui_main_nav_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_nav_timetable"
        android:enabled="true"
        android:icon="@drawable/ic_event_note_white_24dp"
        android:title="@string/ui_main_nav_timetable"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_nav_notes"
        android:enabled="true"
        android:icon="@drawable/ic_description_white_24dp"
        android:title="@string/ui_main_nav_notes"
        app:showAsAction="ifRoom" />
</menu>