<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">


    <LinearLayout
        android:id="@+id/login_layout_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_login_title"
            android:textAlignment="center"
            android:textColor="@color/imperial_core_light_grey"
            android:textSize="30sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/login_login_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_login_instruction"
            android:textAlignment="center"
            android:textColor="@color/imperial_core_light_grey"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_username_background"
                android:ems="10"
                android:hint="@string/ui_login_username"
                android:inputType="textNoSuggestions|textVisiblePassword" />

            <EditText
                android:id="@+id/login_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_password_background"
                android:ems="10"
                android:hint="@string/ui_login_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <TextView
            android:id="@+id/login_error_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/login_error_background"
            android:gravity="center_horizontal"
            android:textColor="@color/material_red_600"
            android:visibility="gone"
            tools:text="Error"
            tools:visibility="visible" />

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/login_button_background"
            android:text="@string/ui_login_login"
            android:textColor="@color/imperial_core_light_grey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout_in_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/login_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/imperial_core_light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="CATeDroid x.y.z-dev.0" />
</android.support.constraint.ConstraintLayout>